Fix portal urls cache on X11

When I was reading QPA code at first, I was thinking that windows and
cocoa QPAs have a QMimeData for all the run time, while xcb and wayland
create them on every owner change. It seems I've misread the xcb code
as the portal cache bugs on it now.

This changes the cache to use the last transfer ID that should make it
unaware of the implementation detail while still allowing the consumer
to get portal urls until another file is copied.

BUG: 460314